# kvoicewalk

./: .gitignore  BACKLOG.md  HANDOFF.md  _zt_connector.md  failure.json  failure.jsonl  log.txt  main.py  pyproject.toml
utilities/: gptsovits_adapter.py  preprocessor.py  server.py  speech_generator.py  tts_engine.py  voice_map.json
