[project]
name = "kvoicewalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "demucs>=4.0.1",
    "fastapi>=0.115.0",
    "faster-whisper>=1.2.1",
    "fugashi>=1.5.2",
    "hf-xet>=1.5.0",
    "huggingface-hub>=0.31.4",
    "jaconv>=0.5.0",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "misaki>=0.9.4",
    "mojimoji>=0.0.13",
    "numpy>=2.2.6",
    "onnxruntime<1.24",
    "pip>=25.1.1",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pyopenjtalk>=0.4.1",
    "resemblyzer>=0.1.4",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
    "unidic>=1.1.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
